@@ -1,3 +1,8 @@
+2006-07-22  Andrew Cagney  <cagney@redhat.com>
+
+	* tests/TestDwfl.java (trueXXX, brokenXXX): Add.
+	(testGetLine): Disable.
+
 2005-07-21  Adam Jocksch  <ajocksch@redhat.com>
 
 	* tests/testDwfl.java: GNU formatted.
